feat(assets): add product images and download script
add groundnuts, mobile accessories, and home appliances images
include optimized versions in multiple sizes and formats
implement download script for fetching stock images
update product listings with new image references
improve home page design with new hero section

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assets:optimize": "node scripts/optimize-images.mjs",
     "assets:ocr": "node scripts/extract-ocr.mjs",
     "assets:build": "npm run assets:optimize && npm run assets:ocr",
+    "assets:download": "node scripts/download-images.mjs",
     "deploy": "vercel"
   },
   "dependencies": {
